--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -118,8 +118,8 @@
                     <fa-icon [icon]="iconWeigth"></fa-icon>
                   </div>
                   <div class="container-value">
-                    <span>KG: {{round(romaneio[0].pendingKg)}}</span>
-                    <span>Sacas: {{round(romaneio[0].pendingBags)}}</span>
+                    <span>KG: {{round(romaneioPerDate[4].pendingKg)}}</span>
+                    <span>Sacas: {{round(romaneioPerDate[4].pendingBags)}}</span>
                   </div>
                 </li>
 
@@ -129,8 +129,8 @@
                     <fa-icon [icon]="iconTractor"></fa-icon>
                   </div>
                   <div class="container-value">
-                    <span>KG: {{round(romaneio[0].harvestKg)}}</span>
-                    <span>Sacas: {{round(romaneio[0].harvestBags)}}</span>
+                    <span>KG: {{round(romaneioPerDate[4].harvestKg)}}</span>
+                    <span>Sacas: {{round(romaneioPerDate[4].harvestBags)}}</span>
                   </div>
                 </li>
 
@@ -140,8 +140,8 @@
                     <fa-icon [icon]="iconLoad"></fa-icon>
                   </div>
                   <div class="container-value">
-                    <span>Contagem de Cargas (Sacas): {{round(romaneio[0].harvestLoadCount)}}</span>
-                    <span>Média de Qtde de Sacas por Carga: {{round(romaneio[0].harvestLoadAvgBags)}}</span>
+                    <span>Contagem de Cargas (Sacas): {{round(romaneioPerDate[4].harvestLoadCount)}}</span>
+                    <span>Média de Qtde de Sacas por Carga: {{round(romaneioPerDate[4].harvestLoadAvgBags)}}</span>
                   </div>
                 </li>
 
@@ -151,10 +151,10 @@
                     <fa-icon [icon]="iconLoad"></fa-icon>
                   </div>
                   <div class="container-value">
-                    <span>Saída (KG): {{round(romaneio[0].outputKg)}}</span>
-                    <span>Saída (Sacas): {{round(romaneio[0].outputBags)}}</span>
-                    <span>Contagem de Cargas (Sacas): {{round(romaneio[0].outputLoadCount)}}</span>
-                    <span>Média de Qtde de Sacas por Carga: {{round(romaneio[0].outputLoadAvgBags)}}</span>
+                    <span>Saída (KG): {{round(romaneioPerDate[4].outputKg)}}</span>
+                    <span>Saída (Sacas): {{round(romaneioPerDate[4].outputBags)}}</span>
+                    <span>Contagem de Cargas (Sacas): {{round(romaneioPerDate[4].outputLoadCount)}}</span>
+                    <span>Média de Qtde de Sacas por Carga: {{round(romaneioPerDate[4].outputLoadAvgBags)}}</span>
                   </div>
                 </li>
 
@@ -164,10 +164,10 @@
                     <fa-icon [icon]="iconLoad"></fa-icon>
                   </div>
                   <div class="container-value">
-                    <span>Entrada (KG): {{round(romaneio[0].inputKg)}}</span>
-                    <span>Entrada (Sacas): {{round(romaneio[0].inputBags)}}</span>
-                    <span>Contagem de Cargas (Sacas): {{round(romaneio[0].inputLoadCount)}}</span>
-                    <span>Média de Qtde de Sacas por Carga: {{round(romaneio[0].inputLoadAvgBags)}}</span>
+                    <span>Entrada (KG): {{round(romaneioPerDate[4].inputKg)}}</span>
+                    <span>Entrada (Sacas): {{round(romaneioPerDate[4].inputBags)}}</span>
+                    <span>Contagem de Cargas (Sacas): {{round(romaneioPerDate[4].inputLoadCount)}}</span>
+                    <span>Média de Qtde de Sacas por Carga: {{round(romaneioPerDate[4].inputLoadAvgBags)}}</span>
                   </div>
                 </li>
 
@@ -177,8 +177,8 @@
                     <fa-icon [icon]="iconWareHouse"></fa-icon>
                   </div>
                   <div class="container-value">
-                    <span>Sacas Devolvidas: {{round(romaneio[0].returnKg)}}</span>
-                    <span>Saldo Depósito: {{round(romaneio[0].warehouseBalance)}}</span>
+                    <span>Sacas Devolvidas: {{round(romaneioPerDate[4].returnKg)}}</span>
+                    <span>Saldo Depósito: {{round(romaneioPerDate[4].warehouseBalance)}}</span>
                   </div>
                 </li>
 
