--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -129,6 +129,11 @@ ul {
   color: #fff;
 }
 
+.container-icon-title > fa-icon {
+  cursor: pointer;
+}
+
+
 .container-icon > p {
   margin-right: 10px;
 }
