--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -96,7 +96,7 @@
             </div>
             <div class="box shadow mt-4">
               <app-line-chart
-              [series]="mountLineSeriesAvgr()"
+              [series]="mountLineSeriesAvrg()"
               title="Romaneios"
               subtitle="Médias e Contagens"
               type="line"
