6 files modified, 4 added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -91,16 +91,14 @@
               [series]="mountLineSeries2()"
               title="Romaneios"
               subtitle="Valores Brutos"
-              type="area"
               ></app-line-chart>
             </div>
             <div class="box shadow mt-4">
-              <app-line-chart
+              <app-area-chart-romaneio
               [series]="mountLineSeriesAvrg()"
               title="Romaneios"
               subtitle="Médias e Contagens"
-              type="line"
-              ></app-line-chart>
+              ></app-area-chart-romaneio>
             </div>
 
           </div>
