--- a/src/app/filter-modal/filter-modal.component.html
+++ b/src/app/filter-modal/filter-modal.component.html
@@ -33,7 +33,7 @@
         class="po-md-7"
         name="ruralProperty"
         p-icon="po-icon-search"
-        p-label="Safra/Negócios"
+        p-label="Propriedade Rural"
         (p-change)="changeRuralProperty()"
         [p-options]="comboRuralPropertyService"
         formControlName="ruralProperty"
